# reversi-wasm

./: Cargo.toml  README.md  index.html  index.md
pkg/: package.json  reversi_wasm.d.ts  reversi_wasm.js  reversi_wasm_bg.wasm  reversi_wasm_bg.wasm.d.ts
src/: lib.rs  reversi.rs
src/reversi/: position.rs  score.rs  side.rs
