[package]
name = "reversi-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reversi (Othello) game."
repository = "https://github.com/vvrtsaix/reversi-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
wasm-react = "0.3.2"
web-sys = "0.3.58"
